--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+  <h1>Chenhao-Yu.github.io</h1>
+  <p></p>
   </body>
 </html>
+<<iframe title="Lehigh Enrollment 2017" aria-label="chart" id="datawrapper-chart-qn1KR" src="https://datawrapper.dwcdn.net/qn1KR/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="640"></iframe>>
