--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
   <p></p>
   </body>
 </html>
-<<iframe title="Lehigh Enrollment 2017" aria-label="chart" id="datawrapper-chart-qn1KR" src="https://datawrapper.dwcdn.net/qn1KR/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="640"></iframe>>
+<iframe title="Lehigh Enrollment 2017" aria-label="chart" id="datawrapper-chart-qn1KR" src="https://datawrapper.dwcdn.net/qn1KR/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="640"></iframe>
