--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
   <h1>Chenhao-Yu.github.io</h1>
-  <p>!!!</p>
+  <p>My name is Chenhao Yu, I go by Henry. I am an undergraduate student at Lehigh University studying business information systems and Japanese. 
+    This is my first ever experience with github and I would love to learn more!</p>
+  
   </body>
 </html>
 <iframe title="Lehigh Enrollment 2017" aria-label="chart" id="datawrapper-chart-qn1KR" src="https://datawrapper.dwcdn.net/qn1KR/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="640"></iframe>
