--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
   
   </body>
 </html>
-<iframe title="Lehigh Enrollment 2017" aria-label="chart" id="datawrapper-chart-qn1KR" src="https://datawrapper.dwcdn.net/qn1KR/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="640"></iframe>
+<iframe title="Carbon Dioxide Emission Trend" aria-label="Interactive area chart" id="datawrapper-chart-julUE" src="https://datawrapper.dwcdn.net/julUE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
