--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
 <iframe title="Carbon Dioxide Emission Trend" aria-label="Interactive area chart" id="datawrapper-chart-julUE" src="https://datawrapper.dwcdn.net/julUE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
 This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.
 <https://youtu.be/Ez4IWcuXX9g>
+  [![Youtube](https://img.youtube.com/vi/Ez4IWcuXX9g/0.jpg)](https://www.youtube.com/watch?v=Ez4IWcuXX9g)
