--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </html>
 <iframe title="Carbon Dioxide Emission Trend" aria-label="Interactive area chart" id="datawrapper-chart-julUE" src="https://datawrapper.dwcdn.net/julUE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
 This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.
-
-[![Virtual Tour](https://i9.ytimg.com/vi/Ez4IWcuXX9g/mq2.jpg?sqp=CPiwmogG&rs=AOn4CLD-KgwcsF0vLnOH7BemVpY2gxtn5A)](https://www.youtube.com/watch?v=Ez4IWcuXX9g)
+<>
+[Virtual Tour](https://www.youtube.com/watch?v=Ez4IWcuXX9g "Youtube Link")
