--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </body>
 </html>
 <iframe title="Carbon Dioxide Emission Trend" aria-label="Interactive area chart" id="datawrapper-chart-julUE" src="https://datawrapper.dwcdn.net/julUE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
-</html>
+</body>
 [Virtual Tour](https://www.youtube.com/watch?v=Ez4IWcuXX9g "Youtube Link")
 This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.
 <https://www.youtube.com/watch?v=Ez4IWcuXX9g>
