--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 
 [Virtual Tour](https://www.youtube.com/watch?v=Ez4IWcuXX9g)
 This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.
-
+<a href="https://www.youtube.com/watch?v=Ez4IWcuXX9g/" title="Virtual Tour">Virtual Tour</a>
 
