--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <iframe title="Carbon Dioxide Emission Trend" aria-label="Interactive area chart" id="datawrapper-chart-julUE" src="https://datawrapper.dwcdn.net/julUE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
 
 
-n\This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.
+<p>This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.</p>
 <a href="https://www.youtube.com/watch?v=Ez4IWcuXX9g/" title="Virtual Tour">Virtual Tour</a>
 
