--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
 <p>This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.</p>
 <a href="https://www.youtube.com/watch?v=Ez4IWcuXX9g/" title="Virtual Tour">Virtual Tour</a>
 
+<p>Tweet Data Visualization #covid
+  <imgsrc="C:\Users\henry_yu826\Desktop\COMM 165\chirp" alt="Can't find image">
