--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <p>This is my first 360 virtual tour. I will take you to a street in Shenzhen China and show you around.</p>
 <a href="https://www.youtube.com/watch?v=Ez4IWcuXX9g/" title="Virtual Tour">Virtual Tour</a>
 
-<h2>Teacher Salary Data Visualization
+<h2>Teacher Salary Data Visualization </h2>
  <p> This map displays the average salary of teachers in the United States by states. You may click on the data points for specifics. Amount are in USD ($). </p>
 <style>.embed-container {position: relative; padding-bottom: 67%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="300" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Teacher Salary by State" src="//lu.maps.arcgis.com/apps/Embed/index.html?webmap=01566ddd17c84a13b0a4b3f920fb26ef&extent=-151.8062,-8.2445,-21.9918,55.6216&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe></div>
